some bugs fixed. internationalization remained.

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,20 @@
-welcome.message=Greetings {0}.Welcome to {1}!
+#UserObject
+
+###username
+error.usernameBlank= username is required!
+error.usernamePattern= username must be at least 3 characters('a-z','A-Z','0-9','-','_')
+
+###password
+error.passwordRequired= password is required!
+error.passwordPattern=password must be at least 8 characters and contains a-z,A-Z,0-9
+
+###email
+error.emailRequired= email is required!
+
+#Service
+
+###addUser
+error.addUser.alreadyExist= there is a user with this username,please try again with another username.
+
+###getById
+error.getById.notFound= Can't find a user by id: 
